# C-DEMO

./: E8_Simplifier.py  LICENSE  README.MD  RibosomeCore.py  bloom_painter.dart  install_bushrouter_v2.2.sh  main.dart  pubspec.yaml  python_robotics.py  robotics_basic.c  ros_vitality_bridge.py  seg_walk.py  sovereign_pulse.dart  sovereign_vault.dart  vault_client.c  vault_client.h  vault_client.py  vault_client_shim.c  vault_server.py
C-DEMO/: vault_client.c
docs/mobile/: SOVEREIGN_HANDSHAKE.md
lib/: main.dart  sovereign_pulse.dart
mobile/lib/screens/: sovereign_handshake.dart
pi_r_engine/: Cargo.toml  pubspec.yaml  sovereign_vault.dart
pi_r_engine/src/: lib.rs  rust_bridge.dart  sovereign_vault.dart
ros_vitality_node/: package.xml  setup.py
ros_vitality_node/launch/: vitality_launch.py
ros_vitality_node/vitality_node/: __init__.py  vitality_bridge.py
