<?xml version="1.0"?>
<package format="2">
  <name>vitality_node</name>
  <version>0.1.0</version>
  <description>Sovereign vitality processor ROS node — FPT mesh integration</description>

  <maintainer email="ak-skwaa-mahawk@protonmail.com">John Carroll</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>